// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should expand directories (stderr) 1`] = `""`;

exports[`should expand directories (stdout) 1`] = `
"directory/file.js
directory/nested-directory/nested-directory-file.js
other-directory/file.js
other-directory/nested-directory/nested-directory-file.js
"
`;

exports[`should expand directories (write) 1`] = `Array []`;

exports[`should support dot pattern (stderr) 1`] = `
"[error] No parser could be inferred for file: file.will-never-support
"
`;

exports[`should support dot pattern (stdout) 1`] = `
"directory/file.js
directory/nested-directory/nested-directory-file.js
other-directory/file.js
other-directory/nested-directory/nested-directory-file.js
other-regular-modules.js
other-supported-file.css
regular-module.js
"
`;

exports[`should support dot pattern (write) 1`] = `Array []`;
